Web UI syntax highlighter now accepts < and > as operators (and "stop" as "null"). To avoid doing a deep parse, it uses significant whitespace to guess whether you are starting a combinator or using an operator.

--- a/trunk/Orchard/web/orc-syntax.css
+++ b/trunk/Orchard/web/orc-syntax.css
@@ -18,6 +18,10 @@ span.literal {
 	color: #090;
 }
 
+span.pattern {
+	text-decoration: underline;
+}
+
 .editbox {
 	font-family: monospace;
 	font-size: 14px;
